@@ -33,9 +33,10 @@ public class MmiUri {
 	
 	
 	/**
-	 * Syntantically validates a string according a pattern that can be written as:
-	 *    <code> ^yyyy[mm[dd][Thh[mm[ss]]]$ </code>,
-	 * where each y, m, d, h, and s is a decimal digit.
+	 * Syntantically validates a string to be an instance of the pattern:
+	 *    <code> ^yyyy[mm[dd][Thh[mm[ss]]]$ </code> 
+	 * (where each y, m, d, h, and s is a decimal digit),
+	 * or equal to a dash ('-').
 	 * 
 	 * <p>
 	 * Note that this checks for the general appearance of a version; 
@@ -44,7 +45,9 @@ public class MmiUri {
 	 * @throws URISyntaxException if the string is invalid as version 
 	 */
 	static void checkVersion(String version) throws URISyntaxException {
-		boolean ok = VERSION_PATTERN.matcher(version).find();
+		boolean ok = version.equals("-") ||
+			VERSION_PATTERN.matcher(version).find();
+		
 		if ( ! ok ) {				
 			throw new URISyntaxException(version, "Invalid version string: " +version);
 		}
@@ -109,8 +112,10 @@ public class MmiUri {
 		}
 		else {
 			int idx_topic = 1;
-			// if parts[1] starts with a digit, take that part as the version:
-			if ( parts[1].length() > 0 && Character.isDigit(parts[1].charAt(0)) ) {
+			// if parts[1] starts with a digit or a dash, take that part as the version:
+			if ( parts[1].length() > 0 
+			&& (Character.isDigit(parts[1].charAt(0)) || parts[1].charAt(0) == '-') 
+			) {
 				// Ok, so take the version and update index for topic
 				_version = parts[1];
 				idx_topic = 2;
